# gds_viewer_qt

./: CMakeLists.txt  LICENSE.txt  README.md
gds_core/: CMakeLists.txt  README.md
gds_core/include/: GdsElements.hpp  GdsLibrary.hpp  GdsReader.hpp  GdsStructure.hpp  GdsTypes.hpp
gds_core/src/: GdsElements.cpp  GdsLibrary.cpp  GdsReader.cpp  GdsStructure.cpp
gds_core/src/internal/: InputStream.cpp  InputStream.hpp  Parser.cpp  Parser.hpp  Record.cpp  Record.hpp  RecordReader.cpp  RecordReader.hpp
gds_core/tests/: CMakeLists.txt  ReaderTests.cpp
gds_core/tests/data/: cross.gds
gds_viewer/: CMakeLists.txt  CoroutinePipeline.hpp  ElementPropertiesDialog.cpp  ElementPropertiesDialog.hpp  GdsSceneView.cpp  GdsSceneView.hpp  HoverPathItem.cpp  HoverPathItem.hpp  HoverPolygonItem.cpp  HoverPolygonItem.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PreparedSceneData.hpp  README.md  main.cpp
gds_viewer/tests/: CMakeLists.txt  ViewerSmokeTests.cpp
